@@ -1,3 +1,8 @@
+2005-11-25  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR c++/9278
+	* g++.dg/other/void1.C: New test.
+
 2005-11-25  Joseph S. Myers  <joseph@codesourcery.com>
 
 	PR middle-end/24998
